Created a small image gallery using Grid. Styled layout so that images resize depending upon size of browser window. Next Step: Create JavaScript Slideshow to open when image is clicked.

--- a/extras.html
+++ b/extras.html
@@ -18,7 +18,19 @@
             <div class="menu-button-burger"></div>
         </div>
     </nav>
-    ART GALLERY COMING SOON.
+    <div id="gallery" class="gallery">
+        <img onclick="startSlider('slider1')" class="image-thumbnail" src="images/BLCoverFront.jpg">
+        <img onclick="startSlider('slider2')" class="image-thumbnail" src="images/BLPBlank.jpg">
+        <img onclick="startSlider('slider3')" class="image-thumbnail" src="images/BLPromo.jpg">
+        <img onclick="startSlider('slider4')" class="image-thumbnail" src="images/19Front.jpg"">
+        <img onclick="startSlider('slider5')" class="image-thumbnail" src="images/19Back.jpg">
+        <img onclick="startSlider('slider6')" class="image-thumbnail" src="images/EARHTConcept.jpg">
+        <img onclick="startSlider('slider7')" class="image-thumbnail" src="images/EARHTFront.jpg">
+        <img onclick="startSlider('slider8')" class="image-thumbnail" src="images/EARHTBack.jpg">
+        <img onclick="startSlider('slider9')" class="image-thumbnail" src="images/ITSCover.jpg">
+
+    </div>
+</div>
 </body>
 
 <script src="bookpage.js"></script>
