--- a/extras.html
+++ b/extras.html
@@ -18,11 +18,44 @@
             <div class="menu-button-burger"></div>
         </div>
     </nav>
+
+    <div id="slider-popup" class="slider-popup">
+        <div id="slider-left" class="slider-left"><div id="arrow-left" class="arrow-left"></div></div>
+        <div id="slider-middle" class="slider-middle">
+            <img id="slider1" class="slider-image" src="images/BLCoverFront.jpg">
+            <img id="slider2" class="slider-image" src="images/BLPBlank.jpg">
+            <img id="slider3" class="slider-image" src="images/BLPromo.jpg">
+            <img id="slider4" class="slider-image" src="images/19Front.jpg">
+            <img id="slider5" class="slider-image" src="images/19Back.jpg">
+            <img id="slider6" class="slider-image" src="images/EARHTConcept.jpg">
+            <img id="slider7" class="slider-image" src="images/EARHTFront.jpg">
+            <img id="slider8" class="slider-image" src="images/EARHTBack.jpg">
+            <img id="slider9" class="slider-image" src="images/ITSCover.jpg">
+          
+            <div id="slide-options" class="">
+              <div id="close-slider" class="close-slider"></div>
+              <div id="circle1" class="progress-circle"></div>
+              <div id="circle2" class="progress-circle"></div>
+              <div id="circle3" class="progress-circle"></div>
+              <div id="circle4" class="progress-circle"></div>
+              <div id="circle5" class="progress-circle"></div>
+              <div id="circle6" class="progress-circle"></div>
+              <div id="circle7" class="progress-circle"></div>
+              <div id="circle8" class="progress-circle"></div>
+              <div id="circle9" class="progress-circle"></div>
+              <div id="pause-button" class="pause"></div>
+          </div>
+        </div>
+        <div id="slider-right" class="slider-right"><div id="arrow-right" class="arrow-right"></div></div>
+      </div>
+
+
+
     <div id="gallery" class="gallery">
         <img onclick="startSlider('slider1')" class="image-thumbnail" src="images/BLCoverFront.jpg">
         <img onclick="startSlider('slider2')" class="image-thumbnail" src="images/BLPBlank.jpg">
         <img onclick="startSlider('slider3')" class="image-thumbnail" src="images/BLPromo.jpg">
-        <img onclick="startSlider('slider4')" class="image-thumbnail" src="images/19Front.jpg"">
+        <img onclick="startSlider('slider4')" class="image-thumbnail" src="images/19Front.jpg">
         <img onclick="startSlider('slider5')" class="image-thumbnail" src="images/19Back.jpg">
         <img onclick="startSlider('slider6')" class="image-thumbnail" src="images/EARHTConcept.jpg">
         <img onclick="startSlider('slider7')" class="image-thumbnail" src="images/EARHTFront.jpg">
@@ -34,4 +67,5 @@
 </body>
 
 <script src="bookpage.js"></script>
+<script src="slider.js"></script>
 </html>
