Resolved hamburger icon error and improved slideshow.  Resolved error that prevented hamburger icon from reverting states when a link in menu was clicked. Altered units of measurement on slideshow elements to enhance resizing capability as well as slideshow view on smaller devices. Added hover effects to left and right arrows. Added symbols to slideshow buttons to denote pause and stop capability. Swapped pause and stop button locations.

--- a/extras.html
+++ b/extras.html
@@ -33,7 +33,7 @@
             <img id="slider9" class="slider-image" src="images/ITSCover.jpg">
           
             <div id="slide-options" class="">
-              <div id="close-slider" class="close-slider"></div>
+              <div id="pause-button" class="pause"><img src="./images/pause.svg"></div>
               <div id="circle1" class="progress-circle"></div>
               <div id="circle2" class="progress-circle"></div>
               <div id="circle3" class="progress-circle"></div>
@@ -43,7 +43,8 @@
               <div id="circle7" class="progress-circle"></div>
               <div id="circle8" class="progress-circle"></div>
               <div id="circle9" class="progress-circle"></div>
-              <div id="pause-button" class="pause"></div>
+              <div id="close-slider" class="close-slider"><img src="./images/stop.svg"></div>
+
           </div>
         </div>
         <div id="slider-right" class="slider-right"><div id="arrow-right" class="arrow-right"></div></div>
