Began revising for mobile. Added viewport metadata so site displays properly on mobile. Added media queries to make changes to menu and slideshow display on mobile devices. (outsite of project code. Set up digital ocean ubuntu droplet with apache server. Began prepping server to act as a host for this project. Next Steps: Finish Media queries so slideshow displays properly on mobile and upload final product to server.

--- a/extras.html
+++ b/extras.html
@@ -3,6 +3,7 @@
     <head>
         <link rel="stylesheet" href="styles.css">
         <meta charset="utf-8"/>
+        <meta name="viewport" content="width=device-width,initial-scale=1">
         <title>Erin Jay Moyer.com Book Extras</title> 
     </head>
 
@@ -50,8 +51,6 @@
         <div id="slider-right" class="slider-right"><div id="arrow-right" class="arrow-right"></div></div>
       </div>
 
-
-
     <div id="gallery" class="gallery">
         <img onclick="startSlider('slider1')" class="image-thumbnail" src="images/BLCoverFront.jpg">
         <img onclick="startSlider('slider2')" class="image-thumbnail" src="images/BLPBlank.jpg">
@@ -62,7 +61,6 @@
         <img onclick="startSlider('slider7')" class="image-thumbnail" src="images/EARHTFront.jpg">
         <img onclick="startSlider('slider8')" class="image-thumbnail" src="images/EARHTBack.jpg">
         <img onclick="startSlider('slider9')" class="image-thumbnail" src="images/ITSCover.jpg">
-
     </div>
 </div>
 </body>
