Altered all pages to add additional content from a second author.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
     <nav>
     <ul class="menu">
-        <li><a class="menuItem" href="https://www.amazon.com/Erin-Moyer/e/B086VYGJ5S" target="_blank">About Author</a></li>
+        <li><a class="menuItem" href="https://www.amazon.com/Erin-Moyer/e/B086VYGJ5S" target="_blank">About EJM</a></li>
+        <li><a class="menuItem" href="https://www.amazon.com/Dee-Rose/e/B07DLDJB2P" target="_blank">About Dee Rose</a></li>
         <li><a class="menuItem" href="extras.html">Book Artwork and Extras</a></li>
         <li><a class="menuItem" href="https://erinmoyerportfolio.com/" target="_blank">Web Portfolio</a></li>
     </ul>
@@ -23,9 +24,17 @@
         <form class="choices">
             <label for="choice"> Select a book </label><br>
             <select id="choice" name="book-choice">
-                <option value="19">19: A Hero's Rise (Novel)</option>
+                <option value="19">19: A Hero's Rise</option>
                 <option value="BL">Black Lotus (Poetry)</option>
                 <option value="EARHT">Even A Rose Has Thorns (Poetry)</option>
+                <option value="CA">Cloning Around </option>
+                <option value="FL">Forbidden Love</option>
+                <option value="H1">The Hangman</option>
+                <option value="GL">The Grand Librarian Future Wizards</option>
+                <option value="TP">Father Tom Padilla</option>
+                <option value="DB">Death Brothers</option>
+                <option value="ST">Susan Taki</option>
+                <option value="HV">Hangman Vengeance</option>
             </select><br>
             <button onclick="downloadChoice()">Download Book</button>
         </form>
