--- a/extras.html
+++ b/extras.html
@@ -11,8 +11,8 @@
 <body>
     <nav>
         <ul class="menu">
-            <li><a class="menuItem" href="https://www.amazon.com/Erin-Moyer/e/B086VYGJ5S" target="_blank">About Author</a></li>
-            <li><a class="menuItem" href="#">Book Artwork and Extras</a></li>
+            <li><a class="menuItem" href="https://www.amazon.com/Erin-Moyer/e/B086VYGJ5S" target="_blank">About EJM</a></li>
+            <li><a class="menuItem" href="https://www.amazon.com/Dee-Rose/e/B07DLDJB2P" target="_blank">About Dee Rose</a></li>
             <li><a class="menuItem" href="https://erinmoyerportfolio.com/" target="_blank">Web Portfolio</a></li>
             <li><a class="menuItem" href="index.html">Home</a></li>
         </ul>
@@ -25,14 +25,23 @@
         <div id="slider-left" class="slider-left"><div id="arrow-left" class="arrow-left"></div></div>
         <div id="slider-middle" class="slider-middle">
             <img id="slider1" onclick="toggleSlider('slider1')" class="slider-image" src="images/BLCoverFront.jpg">
-            <img id="slider2" onclick="toggleSlider('slider2')" class="slider-image" src="images/BLPBlank.jpg">
-            <img id="slider3" onclick="toggleSlider('slider3')" class="slider-image" src="images/BLPromo.jpg">
+            <img id="slider2" onclick="toggleSlider('slider2')" class="slider-image" src="images/BLBack.jpg">
+            <img id="slider3" onclick="toggleSlider('slider3')" class="slider-image" src="images/BLPBlank.jpg">
             <img id="slider4" onclick="toggleSlider('slider4')" class="slider-image" src="images/19Front.jpg">
             <img id="slider5" onclick="toggleSlider('slider5')" class="slider-image" src="images/19Back.jpg">
             <img id="slider6" onclick="toggleSlider('slider6')" class="slider-image" src="images/EARHTConcept.jpg">
             <img id="slider7" onclick="toggleSlider('slider7')" class="slider-image" src="images/EARHTFront.jpg">
             <img id="slider8" onclick="toggleSlider('slider8')" class="slider-image" src="images/EARHTBack.jpg">
             <img id="slider9" onclick="toggleSlider('slider9')" class="slider-image" src="images/ITSCover.jpg">
+            <img id="slider10" onclick="toggleSlider('slider10')" class="slider-image" src="images/H.jpg">
+            <img id="slider11" onclick="toggleSlider('slider11')" class="slider-image" src="images/CA.jpg">
+            <img id="slider12" onclick="toggleSlider('slider12')" class="slider-image" src="images/FL.jpg">
+            <img id="slider13" onclick="toggleSlider('slider13')" class="slider-image" src="images/GLFW.jpg">
+            <img id="slider14" onclick="toggleSlider('slider14')" class="slider-image" src="images/ST.jpg">
+            <img id="slider15" onclick="toggleSlider('slider15')" class="slider-image" src="images/DB.jpg">
+            <img id="slider16" onclick="toggleSlider('slider16')" class="slider-image" src="images/HV.jpg">
+            <img id="slider17" onclick="toggleSlider('slider17')" class="slider-image" src="images/GL.jpg">
+            <img id="slider18" onclick="toggleSlider('slider18')" class="slider-image" src="images/HR.jpg">
         </div>
         <div id="slider-right" class="slider-right"><div id="arrow-right" class="arrow-right"></div></div>
       </div>
@@ -41,8 +50,8 @@
         <div class="gallery-row">
         <div class="gallery-column">
             <img onclick="toggleSlider('slider1')" class="image-thumbnail" src="images/BLCoverFront.jpg">
-            <img onclick="toggleSlider('slider2')" class="image-thumbnail" src="images/BLPBlank.jpg">
-            <img onclick="toggleSlider('slider3')" class="image-thumbnail" src="images/BLPromo.jpg">
+            <img onclick="toggleSlider('slider2')" class="image-thumbnail" src="images/BLBack.jpg">
+            <img onclick="toggleSlider('slider3')" class="image-thumbnail" src="images/BLPBlank.jpg">
         </div>
         <div class="gallery-column">
             <img onclick="toggleSlider('slider4')" class="image-thumbnail" src="images/19Front.jpg">
@@ -53,6 +62,21 @@
             <img onclick="toggleSlider('slider7')" class="image-thumbnail" src="images/EARHTFront.jpg">
             <img onclick="toggleSlider('slider8')" class="image-thumbnail" src="images/EARHTBack.jpg">
             <img onclick="toggleSlider('slider9')" class="image-thumbnail" src="images/ITSCover.jpg">
+        </div>
+        <div class="gallery-column">
+            <img onclick="toggleSlider('slider10')" class="image-thumbnail" src="images/H.jpg">
+            <img onclick="toggleSlider('slider11')" class="image-thumbnail" src="images/CA.jpg">
+            <img onclick="toggleSlider('slider12')" class="image-thumbnail" src="images/FL.jpg">
+        </div>
+        <div class="gallery-column">
+            <img onclick="toggleSlider('slider13')" class="image-thumbnail" src="images/GLFW.jpg">
+            <img onclick="toggleSlider('slider14')" class="image-thumbnail" src="images/ST.jpg">
+            <img onclick="toggleSlider('slider15')" class="image-thumbnail" src="images/DB.jpg">
+        </div>
+        <div class="gallery-column">
+            <img onclick="toggleSlider('slider16')" class="image-thumbnail" src="images/HV.jpg">
+            <img onclick="toggleSlider('slider17')" class="image-thumbnail" src="images/GL.jpg">
+            <img onclick="toggleSlider('slider18')" class="image-thumbnail" src="images/HR.jpg">
         </div>
         </div>
     </div>
