--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
         <link rel="stylesheet" href="styles.css">
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width,initial-scale=1">
-        <title>Erin Jay Moyer.com</title> 
+        <title>Free Books erinjaymoyer.com</title> 
     </head>
 <body>
+<header>
     <nav>
     <ul class="menu">
         <li><a class="menuItem" href="https://www.amazon.com/Erin-Moyer/e/B086VYGJ5S" target="_blank">About EJM</a></li>
@@ -18,8 +19,9 @@
         <div class="menu-button-burger"></div>
     </div>
     </nav>
+</header>
 
-    <div class="book-picker">
+    <section class="book-picker">
         <div class="spacer"></div>
         <form class="choices">
             <label for="choice"> Select a book </label><br>
@@ -39,7 +41,7 @@
             <button onclick="downloadChoice()">Download Book</button>
         </form>
         <div class="spacer"></div>
-    </div>
+    </section>
 </body>
 <script src="bookpage.js"></script>
 </html>
